Updated testing and bootstrapping

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,18 @@
 [buildout]
 develop = .
 parts = test
-newest = false
+versions = versions
+
+[versions]
+zope.interface = 3.8.0
+zope.component = 3.12.0
 
 [test]
-recipe = zc.recipe.testrunner
-eggs = dolmen.workflow [test]
-defaults = ['--tests-pattern', '^f?tests$', '-v']
+recipe = z3c.recipe.scripts
+initialization =
+  import pytest
+  if __name__ == '__main__': sys.exit(pytest.main('src'))
+  sys.argv.append('--doctest-modules')
+eggs =
+  dolmen.workflow [test]
+  pytest
